# SSB-Web

./: .gitignore  README.md  SSB Local.postman_collection.json  requirements.txt
SSBClient/app/: build.gradle
SSBClient/gradle/wrapper/: gradle-wrapper.properties
SSBWeb/: manage.py  requirements.txt
SSBWeb/CommodityManage/: admin.py  apps.py  models.py  serializers.py
SSBWeb/CommodityManage/TestUtil/: BookList.txt  CommodityList.csv  SetUp.py  book.db
SSBWeb/Routers/: APIRouter.py
SSBWeb/SSBWeb/: settings.py  urls.py  wsgi.py
SSBWeb/ShoppingSession/: admin.py  apps.py  models.py  serializers.py  viewsets.py
SSBWeb/ShoppingSession/TestUtil/: SetUp.py  testAPI.py  testScene.py
SSBWeb/Test/: SetUpAll.py
UHDServer/desktop/: package.json
UHDServer/driver/: CMakeLists.txt  logic.dot
UHDServer/driver/source/: CMakeLists.txt  main.cpp
UHDServer/driver/source/inc/: UM2xx.h  UM2xxOpCode.h  mqttclient.hpp
UHDServer/driver/source/reference/: async_publish.cpp  pahomqttExample.cpp  serial_example.cc
UHDServer/driver/source/src/: UM2xx.cpp  UM2xxCMD.cpp
UHDServer/driver/test/: CMakeLists.txt  testUM2xx.cpp
hardware/: Apr5.ino  URL.txt  package_stm_index.json  receive.dot
hardware/main/: EPaper.dot  bc26util.hpp  hardwareInit.hpp  main.ino  old.c.bak  socket.dot
ssb-front/: package-lock.json  package.json
ssb-front/prototype/: ssbPrototype.rp
ssb-front/public/: index.html
ssb-front/src/: API.ts  App.tsx  react-app-env.d.ts
tcpserver/: SSCDecoder.py  SSCEncoder.py  client.py  goodsList.csv  server.py
tcpserver/test/: testDecode.py
(+56 files in other folders)
